--- a/ClientReportingBackend/ClientReportingBackend.vbproj
+++ b/ClientReportingBackend/ClientReportingBackend.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A296DED2-82D3-444A-8F61-817BB1F683BA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>ClientReportingBackend.Module1</StartupObject>
+    <StartupObject>Sub Main</StartupObject>
     <RootNamespace>ClientReportingBackend</RootNamespace>
     <AssemblyName>ClientReportingBackend</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -47,10 +47,21 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>..\AssessmentManager\iTextSharp\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="OnBarcode.Barcode.WinForms">
+      <HintPath>..\AssessmentManager\OnBarcode\OnBarcode.Barcode.WinForms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,12 +76,20 @@
     <Import Include="System.Data" />
     <Import Include="System.Diagnostics" />
     <Import Include="System.Linq" />
+    <Import Include="System.Text" />
     <Import Include="System.Xml.Linq" />
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsData.vb" />
+    <Compile Include="clsReportData.vb" />
+    <Compile Include="clsReportDataSet.vb" />
+    <Compile Include="MDIParent1.vb" />
+    <Compile Include="modAssessments.vb" />
+    <Compile Include="modData.vb" />
+    <Compile Include="modMain.vb" />
+    <Compile Include="modRendition.vb" />
     <Compile Include="modReports.vb" />
-    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -96,6 +115,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
